--- a/document/approach.tex
+++ b/document/approach.tex
@@ -1,7 +1,7 @@
-\section{Approach}
+\section{Pendekatan}
 	
-	\subsection{Methodology}
+	\subsection{Metodologi}
 	\lipsum[1]
 
-	\subsection{Algorithms}
+	\subsection{Algoritma}
 	\lipsum[1]
