--- a/document/documentation.tex
+++ b/document/documentation.tex
@@ -4,15 +4,22 @@
 \usepackage{lipsum}
 \usepackage{indentfirst}
 
+\renewcommand{\abstractname}{Abstrak}
+\renewcommand{\contentsname}{Daftar Isi}
+
 \begin{document}
 
 \title{Klasifikasi Tulisan Tangan Menggunakan Multi Layer Perceptron}
 \author{
-	Laila Mauhibah - NPM \\
-	Pandhu Hutomo Aditya - NPM \\
-	Rifqi Al Fatih - NPM \\
-	Roland Raymond Dino - NPM \\
-	Thirafi Dide - 1206240814
+	Kelompok \textbf{Kosong(0)} \\
+	~\\
+	Laila Mauhibah - \texttt{1206208536} \\
+	Pandhu Hutomo Aditya - \texttt{1206277426} \\
+	Rifqi Al Fatih - \texttt{1206243476} \\
+	Roland Raymond Dino - \texttt{1206249265} \\
+	Thirafi Dide - \texttt{1206240814} \\
+	~\\
+	Fakultas Ilmu Komputer, Universitas Indonesia
 }
 
 \maketitle
@@ -20,7 +27,7 @@
 \begin{abstract}
 \lipsum[1]
 ~\\
-\noindent \textbf{Keywords - }Lorem, Ipsum, Dolor, Sit, Amet
+\noindent \textbf{Kata Kunci - }Lorem, Ipsum, Dolor, Sit, Amet
 \end{abstract}
 
 \pagebreak
