--- a/document/problem-description.tex
+++ b/document/problem-description.tex
@@ -1,9 +1,9 @@
-\section{Problem Description}
+\section{Deskripsi Masalah}
 
-	\subsection{Motivation}
+	\subsection{Motivasi}
 	\lipsum[1]
 
-	\subsection{Problem Definition}
+	\subsection{Deskripsi Masalah}
 	\lipsum[1]
 
 	\subsection{Related Work}
