--- a/document/props-cons-conclusion.tex
+++ b/document/props-cons-conclusion.tex
@@ -1,10 +1,10 @@
-\section{Discussions of Props and Cons}
+\section{Kelebihan dan Kekurangan}
 \lipsum
 
-\section{Conclusions}
+\section{Kesimpulan}
 
-	\subsection{Summary}
+	\subsection{Ringkasan}
 	\lipsum[1]
 
-	\subsection{Future Directions}
+	\subsection{Arahan Kedapan}
 	\lipsum[1]
