--- a/document/result-analysis.tex
+++ b/document/result-analysis.tex
@@ -1,10 +1,10 @@
-\section{Experimental Results and Analysis}
+\section{Eksperimen}
 
-	\subsection{Experimental Setup}
+	\subsection{Persiapan Eksperimen}
 	\lipsum[1]
 
-	\subsection{Comparison Schemes}
-	\lipsum[1]
+	\subsection{Skema Perbandingan}
+	Eksperimen akan dilakukan dengan membandingkan banyaknya unit di \textit{hidden layer} dan dampaknya terhadap unit 
 
-	\subsection{Results and Analysis}
+	\subsection{Hasil dan Analisis}
 	\lipsum[1]
