--- a/document/implementation.tex
+++ b/document/implementation.tex
@@ -1,2 +1,5 @@
 \section{Implementasi}
+Implementasi program dibagi menjadi kelas abstraksi multilayer perceptron(MLP) dan kelas untuk membangun model MLP.\\ 
+Kelas yang terdapat abstraksi MLP terdapat pada file MLP.java yang bersumber pada http://physionet.org/challenge/2010/sources/Luiz-Silva/MLP.java.\\
+Kelas untuk membangun model MLP diimplementasi pada Tester.java. Pada kelas ini 
 \lipsum
