--- a/document/implementation.tex
+++ b/document/implementation.tex
@@ -1,5 +1,5 @@
 \section{Implementasi}
-Implementasi program dibagi menjadi kelas abstraksi multilayer perceptron(MLP) dan kelas untuk membangun model MLP.\\ 
-Kelas yang terdapat abstraksi MLP terdapat pada file MLP.java yang bersumber pada http://physionet.org/challenge/2010/sources/Luiz-Silva/MLP.java.\\
-Kelas untuk membangun model MLP diimplementasi pada Tester.java. Pada kelas ini 
+Implementasi program dibagi menjadi kelas untuk membangun model multilayer perceptron(MLP) dan tools MLP.java yang berisi abstraksi MLP.\\ 
+Tools yang berisi abstraksi MLP terdapat pada file MLP.java bersumber pada http://physionet.org/challenge/2010/sources/Luiz-Silva/MLP.java.\\
+Kelas untuk membangun model MLP, diimplementasi pada Tester.java. Kelas ini menerima argumen jumlah \textit{hidden layer} dan \textit{learning rate} yang digunakan untuk membangun model MLP. Kedua argumen ini juga yang nantinya digunakan pada eksperimen untuk membangun model MLP.
 \lipsum
