--- a/document/props-cons-conclusion.tex
+++ b/document/props-cons-conclusion.tex
@@ -8,3 +8,23 @@
 
 	\subsection{Arahan Kedapan}
 	\lipsum[1]
+
+
+pros 
+	dapat memecahkan pasalah yang kompleks, nonlinear
+	dapat beradaptasi dengan beberapa jenis training data
+
+cons 
+sulit diimplementasi dan diinterpretasi
+	tersedia software yang menyediakan built-in solusi.
+sulit menentukan aritektur dari jaringan
+	banyaknya layer
+	banyaknya node pada layer
+		tergantung kepada kompleksitas dari input dan output mapping. 
+		terlalu sedikit backpropagation algorithm gagal menuju konvegen minimun saat training 
+		terlalu banyak overfitting hasil training data dan performa generalisasi buruk
+kompleksitas backpropagation tinggi (curse of dimentionality)
+	jika dimensi data bertambah, maka jumlah data training yang diperlukan juga signifikan bertambah
+
+
+	http://www.researchgate.net/profile/Stephen_Dorling/publication/263416087_Artificial_neural_networks_(the_multilayer_perceptron)-a_review_of_applications_in_the_atmospheric_sciences_-_application_for_wind_retrieval_from_spaceborne_scatterometer_data/links/00b495364b91edd43a000000.pdf
