--- a/document/result-analysis.tex
+++ b/document/result-analysis.tex
@@ -1,10 +1,19 @@
 \section{Eksperimen}
 
 	\subsection{Persiapan Eksperimen}
-	\lipsum[1]
+	Eksperimen akkan menggunakan Multilayer Perceptron yang telah diimplementasi, serta menggunakan dataset yang diberikan dari scele. Dataset terdiri dari 10.000 data
+	dan 785 atribut, dengan atribut pertama adalah label, berisi angka 0-9, dan 784 atribut merepresentasikan \textit{pixel} dari gambar tulisan tangan label tersebut.
+	Setiap \textit{pixel} berisi angka 0-255, merupakan gradasi putih (0) hingga hitam (255). Sebelum digunakan, dimensi data direduksi dengan menghapus atribut yang 
+	memiliki nilai yang sama di setiap data. Hasil pengolahan menghapus 109 atribut dan menyisakan 676 atribut. 
+
+	Implementasi MLP yang digunakan akan menerima 675 input piksel, dan mengeluarkan 10 output yang merepresentasikan label. Input dan Output MLP adalah bilangan riil 
+	antara 0 hingga 1, sehingga dataset dinormalsasi menjadi bilangan antara 0 hingga 1. Atribut label dibagi menjadi 10, menjadi label\_0 hingga label\_9, yang berisi
+	0 atau 1. Atribut piksel dinormalisasi dengan cara membaginya dengan 255.
 
 	\subsection{Skema Perbandingan}
-	Eksperimen akan dilakukan dengan membandingkan banyaknya unit di \textit{hidden layer} dan dampaknya terhadap unit 
+	Eksperimen akan dilakukan dengan membandingkan banyaknya unit di \textit{hidden layer} dan dampaknya terhadap \textit{error} hasil learning Multilayer Perceptron. 
+	Perbandingan akan dilakukan dengan menggunakan model \textit{Exhaustive leave-one-out cross-validation} (LOOCV). Sebanyak 10.000 data akan dibagi menjadi 10 partisi
+	dengan masing-masing 1.000 data, dan untuk setiap partisi akan menjadi data testing dan sisanya menjadi data training. Error hasil learning untuk setiap partisi akan dirata-rata.
 
 	\subsection{Hasil dan Analisis}
 	\lipsum[1]
