--- a/document/problem-description.tex
+++ b/document/problem-description.tex
@@ -1,10 +1,15 @@
 \section{Deskripsi Masalah}
 
 	\subsection{Motivasi}
-	\lipsum[1]
+	Banyaknya surat yang dikirim setiap harinya membuat kantor pos dituntut untuk mengirimkan surat-surat tersebut sesuai dengan kode pos yang ada. Pengelompokan surat berdasarkan kode pos secara manual tentunya akan memakan banyak waktu. Oleh karena itu perlu dilakukan pendekatan lain yang lebih efektif. Salah satu pendekatan yang dapat dilakukan adalah dengan menggunakan metode \textit{Multilayer Perceptron} dalam \textit{neural network} untuk \textit{handwritten} (dalam hal ini digit) \textit{recognition} serta \textit{machine learning}. 
+
 
 	\subsection{Deskripsi Masalah}
-	\lipsum[1]
+	Dalam percobaan kali ini masalah-masalah yang akan kami bahas antara lain:
+	\begin{enumerate}
+		\item Metode Multilayer Perceptron dalam Neural Network untuk \textit{digit recognition} 
+	  	\item Parameter yang berpengaruh dalam \textit{digit recognition}
+	\end{enumerate}
 
 	\subsection{Related Work}
-	\lipsum[1]
+	Sebelumnya Violeta Sandu dan Florin Leon telah melakukan penelitian mengenai \textit{digit recognition} dalam \textit{paper} yang berjudul "Recognition of Handwritten Digits Using Multilayer Perceptrons". Dalam penelitiannya Violeta Sandu dan Florin Leon menggabungkan metode optimasi berbeda untuk membangun dan melatih \textit{neural network} seperti \textit{Discrete Cosine Transform, Zig-zag sorting, adaptive learning rate}.
