--- a/document/documentation.tex
+++ b/document/documentation.tex
@@ -32,6 +32,23 @@
 
 \pagebreak
 
+\section*{Kontribusi Kelompok}
+\begin{center}
+  \begin{tabular}{ | l | l | c | }
+  	\hline
+  	Nama 					& Pekerjaan 										& Persentase \\
+    \hline
+    Laila Mauhibah 			& Deskripsi Masalah, Motivasi, dan Paper Terkait 	& 20\% \\ 
+    Pandhu Hutomo Aditya 	& Kelebihan dan Kekurangan, Kesimpulan 				& 20\% \\ 
+    Rifqi Al Fatih 			& Implementasi, Modifikasi Tools 					& 20\% \\
+    Roland Raymond Dino 	& Pendekatan, Metodologi, Algoritma 				& 20\% \\
+	Thirafi Dide 			& Eksperimen dan Analisa 							& 20\% \\
+    \hline
+  \end{tabular}
+\end{center}
+
+\pagebreak
+
 \tableofcontents
 
 \pagebreak
