--- a/document/props-cons-conclusion.tex
+++ b/document/props-cons-conclusion.tex
@@ -20,3 +20,5 @@ Kompleksitas \textit{backpropagation} tinggi dikarenakan \textit{curse of diment
 
 	\subsection{Arahan Kedapan}
 	\lipsum[1]
+
+Gardner, M. W. Dorling, S. R. 1998. \textit{Artificial Neural Networks (The Multilayer Perceptron)-A Review of Applications in the Atmospheric Sciences}. Atmospheric Environtment vol. 32 no. 14/15. Great Britain.  
