--- a/document/documentation.tex
+++ b/document/documentation.tex
@@ -25,9 +25,9 @@
 \maketitle
 
 \begin{abstract}
-\lipsum[1]
+Klasifikasi merupakan masalah yang sering ditemukan dalam kehidupan sehari-hari. Pembelajaran tentang klasifikasi juga mulai dikembangkan dalam dunia IT. Fokus pembelajaran \textit{Data Mining} dalam \textit{machine learning} adalah klasifikasi, \textit{clustering}, regresi dan lain-lain. Dalam \textit{paper} ini kita akan menggunakan metode \textit{Multi-layer Perceptron} untuk melakukan penelitian terhadap \textit{Digit Recognizer}. Dalam masalah \textit{Digit Recognizer} ini dideskripsikan bahwa sebuah kantor pos ingin mengirim surat secara otomatis berdasarkan kode pos. Lalu dikumpulkan sebuah data yang berisi 10000 tulisan tangan berupa angka. Setiap data memiliki label yang menandakan sebuah angka, dan 256 piksel dari angka tulisan tangan. \textit{Multi-layer Perceptron} digunakan untuk mengenali tulisan tangan yang terdapat pada kode pos tersebut.
 ~\\
-\noindent \textbf{Kata Kunci - }Lorem, Ipsum, Dolor, Sit, Amet
+\noindent \textbf{Kata Kunci - }\textit{Neural Network, Digit Recognizer, Multilayer Perceptron}
 \end{abstract}
 
 \pagebreak
